--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<section [class.alternate-theme]='isAlternateTheme'>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</section>
+
+
