Password masking, password hint.

--- a/angular/src/app/pages/footer/footer.component.html
+++ b/angular/src/app/pages/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class='primary'>
   <span class='spacer'></span>
-  © Copyright Angular-Java. {{buildDate | date:'yyyy'}}
+  © Copyright Angular-Java-CRUD. {{buildDate | date:'yyyy'}}
   <span class='spacer'></span>
 </mat-toolbar>
