--- a/angular/src/app/pages/security/login/login.component.html
+++ b/angular/src/app/pages/security/login/login.component.html
@@ -3,11 +3,17 @@
 </div>
 
 <mat-card>
-  <mat-card-title align='center'>Login</mat-card-title>
+  <mat-card-title align='center'>
+    Login
+    <br>
+    <mat-divider></mat-divider>
+    <br>
+    <div class='hint-msg'>Hint : userone@gmail.com - password</div>
+  </mat-card-title>
   <mat-card-content align='center'>
     <form [formGroup]='loginForm' class='login-form-container'>
       <mat-form-field  [ngClass]="{'error': loginForm.controls['email'].errors && loginForm.controls['email'].dirty}">
-        <input matInput type='text' formControlName='email' placeholder='userone@gmail.com' required>
+        <input matInput type='text' formControlName='email' placeholder='E-Mail' required>
         <div *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)" class='error-msg'>
           <div *ngIf="loginForm.controls['email'].errors.required">Username is required.</div>
           <div *ngIf="loginForm.controls['email'].errors.minlength">Username must be at least 2 characters long.</div>
