--- a/angular/src/app/pages/user/edit-user/edit-user.component.html
+++ b/angular/src/app/pages/user/edit-user/edit-user.component.html
@@ -2,7 +2,6 @@
   <mat-card-title align='center'>Edit User</mat-card-title>
   <mat-card-content align='center'>
     <form [formGroup]='editForm' class='login-form-container'>
-
       <mat-form-field [ngClass]="{'error': editForm.controls['email'].errors && editForm.controls['email'].dirty}">
         <input matInput type='text' formControlName='email' placeholder='E-Mail' required>
         <div *ngIf="editForm.controls['email'].invalid && (editForm.controls['email'].dirty || editForm.controls['email'].touched)" class='error-msg'>
@@ -11,7 +10,6 @@
           <div *ngIf="editForm.controls['email'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
         </div>
       </mat-form-field>
-
       <mat-form-field [ngClass]="{'error': editForm.controls['firstName'].errors && editForm.controls['firstName'].dirty}">
           <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
           <div *ngIf="editForm.controls['firstName'].invalid && (editForm.controls['firstName'].dirty || editForm.controls['firstName'].touched)" class='error-msg'>
@@ -26,15 +24,10 @@
             <div *ngIf="editForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
           </div>
         </mat-form-field>
-
       <mat-form-field>
-        <input matInput type='password' formControlName='password' placeholder='Password' required>
-        <div *ngIf="editForm.controls['password'].invalid && (editForm.controls['password'].dirty || editForm.controls['password'].touched)" class='error-msg'>
-          <div *ngIf="editForm.controls['password'].errors.required">Password is required.</div>
-          <div *ngIf="editForm.controls['password'].errors.minlength">Password must be at least 5 characters long.</div>
-          <div *ngIf="editForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
-        </div>
-      </mat-form-field>      
+        <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
+        <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
+      </mat-form-field>
     </form>
   </mat-card-content>
   <mat-card-actions align='right'>
