Better role login control, footer font.

--- a/angular/src/app/pages/footer/footer.component.html
+++ b/angular/src/app/pages/footer/footer.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar class='primary'>
   <span class='spacer'></span>
-  © Copyright Angular-Java-CRUD. {{buildDate | date:'yyyy'}}
+  <div class='hint-msg'>
+    © Copyright Angular-User-CRUD. {{buildDate | date:'yyyy'}}
+  </div>  
   <span class='spacer'></span>
 </mat-toolbar>
