--- a/angular/src/app/pages/header/header.component.html
+++ b/angular/src/app/pages/header/header.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color='primary'>
-  <mat-icon>home</mat-icon>
+  <button mat-icon-button routerLink='/login'>
+    <mat-icon>home</mat-icon>
+  </button>  
   <span class='spacer'></span>
   <span>Angular User CRUD</span>
   <span class='spacer'></span>
