--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: column;
 }
-
 .login-form-container > * {
     width: 100%;
 }
@@ -26,4 +25,28 @@
 .hint-msg {
     color: blueviolet;
     font-size: 52%;
+}
+
+/*  tutorial */
+.div.container {
+    margin: 0px 40px;
+}
+form.normal-form {
+    margin: 10px;
+}
+.controls-container {
+    width: 100%;
+    padding: 5%;
+}
+.controls-container > * {
+    width: 100%;
+}
+.add-bottom-padding {
+    padding-bottom: 10px;
+}
+mat-radio-group mat-radio-button {
+    margin-left: 5px;
+}
+.button-row button {
+    margin: 5px;
 }
