MongoDB, login status bar, error handling

--- a/angular/src/app/pages/footer/footer.component.html
+++ b/angular/src/app/pages/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class='primary'>
+<mat-toolbar class='primary' style='height: 50px;'>
   <span class='spacer'></span>
   <div class='hint-msg'>
     © Copyright Angular-User-CRUD. {{buildDate | date:'yyyy'}}
