--- a/angular/src/app/pages/security/login/login.component.html
+++ b/angular/src/app/pages/security/login/login.component.html
@@ -1,13 +1,15 @@
-<div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">
-  {{errorMsg}}
-</div>
+<mat-card *ngIf='errorMsg'>
+  <mat-card-content align='center'>
+    <div *ngIf='errorMsg' [ngClass]="{'error': errorMsg}">
+      {{errorMsg}}
+    </div>
+  </mat-card-content>
+</mat-card>  
 
 <mat-card>
   <mat-card-title align='center'>
     Login
-    <br>
     <mat-divider></mat-divider>
-    <br>
     <div class='hint-msg'>Hint : userone@gmail.com - password</div>
   </mat-card-title>
   <mat-card-content align='center'>
@@ -24,22 +26,6 @@
         <mat-error *ngIf="loginForm.controls['password'].errors?.minlength">Password must be at least 5 characters long</mat-error>
         <mat-error *ngIf="loginForm.controls['password'].errors?.maxlength">Password must be at most 20 characters long</mat-error>
       </mat-form-field>
-      <!--mat-form-field  [ngClass]="{'error': loginForm.controls['email'].errors && loginForm.controls['email'].dirty}">
-        <input matInput type='text' formControlName='email' placeholder='E-Mail' required>
-        <div *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)" class='error-msg'>
-          <div *ngIf="loginForm.controls['email'].errors.required">Username is required.</div>
-          <div *ngIf="loginForm.controls['email'].errors.minlength">Username must be at least 2 characters long.</div>
-          <div *ngIf="loginForm.controls['email'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
-        </div>
-      </mat-form-field>
-      <mat-form-field [ngClass]="{'error': loginForm.controls['password'].errors && loginForm.controls['password'].dirty}">
-        <input matInput type='password' formControlName='password' placeholder='Password' required>
-        <div *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)" class='error-msg'>
-          <div *ngIf="loginForm.controls['password'].errors.required">Password is required.</div>
-          <div *ngIf="loginForm.controls['password'].errors.minlength">Password must be at least 5 characters long.</div>
-          <div *ngIf="loginForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
-        </div>
-      </mat-form-field-->
     </form>
   </mat-card-content>
   <mat-card-actions align='right'>
@@ -60,65 +46,3 @@
 
 
   <!-- https://www.youtube.com/watch?v=ZGWOc37kQkw -->
-
-<!--mat-card>
-  <mat-card-title align='center'>Employee Form</mat-card-title>
-  <mat-card-content>
-    <form [formGroup]='empForm' class='normal-form'>
-      <mat-grid-list cols='2' rowHeight='300px'>
-        <mat-grid-tile>
-          <div class='controls-container'>
-            <input type='hidden' formControlName='$key'>
-            <mat-form-field>
-              <input formControlName='fullName' matInput placeholder='Full Name' required>
-              <mat-error>Full Name is required</mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <input formControlName='email' matInput placeholder='Email'>
-              <mat-error>Invalid eMail address</mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <input formControlName='mobile' matInput placeholder='Mobile'>
-              <mat-error *ngIf="empForm.controls['mobile'].errors?.required">Mobile number is required</mat-error>
-              <mat-error *ngIf="empForm.controls['mobile'].errors?.minlength">A minimum of 8 characters required</mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <input formControlName='city' matInput placeholder='City'>
-            </mat-form-field>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div class='controls-container'>
-            <div class='add-bottom-padding'>
-              <mat-radio-group formControlName='gender'>
-                <mat-radio-button value='1'>Male</mat-radio-button>
-                <mat-radio-button value='2'>Female</mat-radio-button>
-                <mat-radio-button value='3'>Other</mat-radio-button>
-              </mat-radio-group>
-            </div>
-            <mat-form-field>
-              <mat-select formControlName='department' placeholder='Department'>
-                <mat-option>None</mat-option>
-                <ng-container *ngFor='let department of departments'>
-                  <mat-option value='{{department.id}}'>{{department.value}}</mat-option>
-                </ng-container>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field>
-              <input formControlName='hireDate' matInput [matDatepicker]='picker' placeholder='Hire Date'>
-              <mat-datepicker-toggle matSuffix [for]='picker'></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-            <div class='add-bottom-padding'>
-              <mat-checkbox formControlName='isPermanent'>Permanent Employee</mat-checkbox>
-            </div>
-          </div>
-        </mat-grid-tile>
-      </mat-grid-list>
-    </form>
-  </mat-card-content>
-  <mat-card-actions align='right'>
-    <button mat-raised-button color='primary' type='submit' [disabled]='empForm.invalid'>Submit</button>
-    <button mat-raised-button color='warn' (click)='onClear()'>Clear</button>
-  </mat-card-actions>
-</mat-card-->
