--- a/angular/src/app/pages/user/list-user/list-user.component.html
+++ b/angular/src/app/pages/user/list-user/list-user.component.html
@@ -1,63 +1,71 @@
 <mat-card>
-    <mat-card-title align='center'>User List</mat-card-title>
+    <mat-card-title align='center'>
+        User List
+        <br>
+        <mat-divider></mat-divider>
+    </mat-card-title>
     <mat-card-content align='center'>
-
+        <!-- starting-->
         <div *ngIf='dataSource.data.length > 0'>
             <div class='example-header'>
                 <mat-form-field>
-                <input matInput (keyup)='applyFilter($event.target.value)' placeholder='Filter'>
+                    <input matInput (keyup)='applyFilter($event.target.value)' placeholder='Filter'>
                 </mat-form-field>
             </div>
             <div class='example-container mat-elevation-z8'>
                 <mat-table [dataSource]='dataSource' matSort>
-
-                <ng-container matColumnDef='id'>
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-                    <mat-cell *matCellDef='let user'>{{user.id}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef='firstName'>
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>First Name</mat-header-cell>
-                    <mat-cell *matCellDef='let user'>{{user.firstName}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef='lastName'>
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</mat-header-cell>
-                    <mat-cell *matCellDef='let user'>{{user.lastName}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef='email'>
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>E-Mail</mat-header-cell>
-                    <mat-cell *matCellDef='let user'>{{user.email}}</mat-cell>
-                </ng-container>
-            
-                <ng-container matColumnDef="edit">
-                    <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-                    <mat-cell *matCellDef="let user">
-                        <button mat-raised-button (click)='editUser(user)'>
-                            <mat-icon color='primary'>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-            
-                <ng-container matColumnDef="delete">
-                    <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-                    <mat-cell *matCellDef="let user">
-                        <button mat-raised-button (click)='deleteUser(user)'>
-                            <mat-icon color='accent'>
-                                <i class="material-icons">remove_circle_outline</i>
-                            </mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-            
-                <mat-header-row *matHeaderRowDef='displayedColumns'></mat-header-row>
-                <mat-row *matRowDef='let user; columns: displayedColumns;' [ngClass]="{'highlight': selectedRowIndex == user.id}" (click)='highlightTableRow(user)'></mat-row>
-                </mat-table>
-            </div>
-        </div>
+                    <ng-container matColumnDef='userId'>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+                        <mat-cell *matCellDef='let user'>{{user.userId}}</mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef='firstName'>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>First Name</mat-header-cell>
+                        <mat-cell *matCellDef='let user'>{{user.firstName}}</mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef='lastName'>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</mat-header-cell>
+                        <mat-cell *matCellDef='let user'>{{user.lastName}}</mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef='username'>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>User Name</mat-header-cell>
+                        <mat-cell *matCellDef='let user'>{{user.username}}</mat-cell>
+                    </ng-container>    
+                    <ng-container matColumnDef="password">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Password </mat-header-cell>
+                        <mat-cell *matCellDef="let user"> {{user.password}} </mat-cell>
+                    </ng-container>        
         
+                    <ng-container matColumnDef="edit">
+                        <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+                        <mat-cell *matCellDef="let user">
+                            <button mat-raised-button (click)='editUser(user)'>
+                                <mat-icon color='primary'>edit</mat-icon>
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="delete">
+                        <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+                        <mat-cell *matCellDef="let user">
+                            <button mat-raised-button (click)='deleteUser(user)'>
+                                <mat-icon color='accent'>
+                                    <i class="material-icons">remove_circle_outline</i>
+                                </mat-icon>
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+        
+                    <mat-header-row *matHeaderRowDef='displayedColumns'></mat-header-row>
+                    <mat-row *matRowDef='let user; columns: displayedColumns;'></mat-row>
+                </mat-table>
+        
+                <mat-paginator [pageSizeOptions]='[5, 10, 15]'></mat-paginator>
+            </div>
+        </div>        
+        <!-- ending-->
     </mat-card-content>
     <mat-card-actions align='right'>
         <button mat-raised-button color='accent' class='btn' (click)='addUser()'>Add User</button>
         <a mat-raised-button routerLink='/register'>Register</a>
     </mat-card-actions>
-  </mat-card>
+</mat-card>
