--- a/angular/src/app/pages/user/add-user/add-user.component.html
+++ b/angular/src/app/pages/user/add-user/add-user.component.html
@@ -12,44 +12,102 @@
       <mat-divider></mat-divider>
     </mat-card-title>
     <mat-card-content align='center'>
-      <form [formGroup]='addForm' class='login-form-container'>
+      <!-- <form [formGroup]='addUserForm' class='login-form-container'> -->
+      <form [formGroup]='addUserForm' class='normal-form'>
+        <input type='hidden' formControlName='id'>
+        <input type='hidden' formControlName='userId'>
+        <mat-grid-list cols='2' rowHeight='300px'>
+          <mat-grid-tile>
+            <div class='controls-container'>
+              <mat-form-field [ngClass]="{'error': addUserForm.controls['username'].errors && addUserForm.controls['username'].dirty}">
+                <input matInput type='text' formControlName='username' placeholder='E-Mail' required>
+                <div *ngIf="addUserForm.controls['username'].invalid && (addUserForm.controls['username'].dirty || addUserForm.controls['username'].touched)" class='error-msg'>
+                  <div *ngIf="addUserForm.controls['username'].errors.required">Username is required.</div>
+                  <div *ngIf="addUserForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
+                  <div *ngIf="addUserForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
+                </div>
+              </mat-form-field>
+              <mat-form-field [ngClass]="{'error': addUserForm.controls['firstName'].errors && addUserForm.controls['firstName'].dirty}">
+                <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
+                <div *ngIf="addUserForm.controls['firstName'].invalid && (addUserForm.controls['firstName'].dirty || addUserForm.controls['firstName'].touched)" class='error-msg'>
+                  <div *ngIf="addUserForm.controls['firstName'].errors.required">First Name is required.</div>
+                  <div *ngIf="addUserForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
+                </div>
+              </mat-form-field>
+              <mat-form-field [ngClass]="{'error': addUserForm.controls['lastName'].errors && addUserForm.controls['lastName'].dirty}">
+                <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
+                <div *ngIf="addUserForm.controls['lastName'].invalid && (addUserForm.controls['lastName'].dirty || addUserForm.controls['lastName'].touched)" class='error-msg'>
+                  <div *ngIf="addUserForm.controls['lastName'].errors.required">Last Name is required.</div>
+                  <div *ngIf="addUserForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
+                </div>
+              </mat-form-field>
+            </div>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <div class='controls-container'>
+              <mat-form-field>
+                <input matInput type='password' formControlName='password' placeholder='Password' required>
+                <div *ngIf="addUserForm.controls['password'].invalid && (addUserForm.controls['password'].dirty || addUserForm.controls['password'].touched)" class='error-msg'>
+                  <div *ngIf="addUserForm.controls['password'].errors.required">Password is required.</div>
+                  <div *ngIf="addUserForm.controls['password'].errors.minlength">Password must be at least 5 characters long.</div>
+                  <div *ngIf="addUserForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
+                </div>
+              </mat-form-field>
+              <!-- <mat-form-field>
+                <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
+                <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
+              </mat-form-field> -->
+              <div class='add-bottom-padding'>
+                <mat-radio-group formControlName='gender'>
+                  <mat-radio-button value='MALE'>Male</mat-radio-button>
+                  <mat-radio-button value='FEMALE'>Female</mat-radio-button>
+                  <mat-radio-button value='OTHER'>Other</mat-radio-button>
+                </mat-radio-group>
+              </div>            
+              <mat-form-field>
+                <input formControlName='dob' matInput [matDatepicker]='picker' placeholder='Date of Birth'>
+                <mat-datepicker-toggle matSuffix [for]='picker'></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+          </mat-grid-tile>
+        </mat-grid-list>        
   
-        <mat-form-field [ngClass]="{'error': addForm.controls['username'].errors && addForm.controls['username'].dirty}">
+        <!--mat-form-field [ngClass]="{'error': addUserForm.controls['username'].errors && addUserForm.controls['username'].dirty}">
           <input matInput type='text' formControlName='username' placeholder='E-Mail' required>
-          <div *ngIf="addForm.controls['username'].invalid && (addForm.controls['username'].dirty || addForm.controls['username'].touched)" class='error-msg'>
-            <div *ngIf="addForm.controls['username'].errors.required">Username is required.</div>
-            <div *ngIf="addForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
-            <div *ngIf="addForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
+          <div *ngIf="addUserForm.controls['username'].invalid && (addUserForm.controls['username'].dirty || addUserForm.controls['username'].touched)" class='error-msg'>
+            <div *ngIf="addUserForm.controls['username'].errors.required">Username is required.</div>
+            <div *ngIf="addUserForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
+            <div *ngIf="addUserForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
           </div>
         </mat-form-field>
-  
-        <mat-form-field [ngClass]="{'error': addForm.controls['firstName'].errors && addForm.controls['firstName'].dirty}">
-            <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
-            <div *ngIf="addForm.controls['firstName'].invalid && (addForm.controls['firstName'].dirty || addForm.controls['firstName'].touched)" class='error-msg'>
-              <div *ngIf="addForm.controls['firstName'].errors.required">First Name is required.</div>
-              <div *ngIf="addForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
-            </div>
-          </mat-form-field>
-          <mat-form-field [ngClass]="{'error': addForm.controls['lastName'].errors && addForm.controls['lastName'].dirty}">
-            <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
-            <div *ngIf="addForm.controls['lastName'].invalid && (addForm.controls['lastName'].dirty || addForm.controls['lastName'].touched)" class='error-msg'>
-              <div *ngIf="addForm.controls['lastName'].errors.required">Last Name is required.</div>
-              <div *ngIf="addForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
-            </div>
-          </mat-form-field>
-  
+        <mat-form-field [ngClass]="{'error': addUserForm.controls['firstName'].errors && addUserForm.controls['firstName'].dirty}">
+          <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
+          <div *ngIf="addUserForm.controls['firstName'].invalid && (addUserForm.controls['firstName'].dirty || addUserForm.controls['firstName'].touched)" class='error-msg'>
+            <div *ngIf="addUserForm.controls['firstName'].errors.required">First Name is required.</div>
+            <div *ngIf="addUserForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
+          </div>
+        </mat-form-field>
+        <mat-form-field [ngClass]="{'error': addUserForm.controls['lastName'].errors && addUserForm.controls['lastName'].dirty}">
+          <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
+          <div *ngIf="addUserForm.controls['lastName'].invalid && (addUserForm.controls['lastName'].dirty || addUserForm.controls['lastName'].touched)" class='error-msg'>
+            <div *ngIf="addUserForm.controls['lastName'].errors.required">Last Name is required.</div>
+            <div *ngIf="addUserForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
+          </div>
+        </mat-form-field>
         <mat-form-field>
           <input matInput type='password' formControlName='password' placeholder='Password' required>
-          <div *ngIf="addForm.controls['password'].invalid && (addForm.controls['password'].dirty || addForm.controls['password'].touched)" class='error-msg'>
-            <div *ngIf="addForm.controls['password'].errors.required">Password is required.</div>
-            <div *ngIf="addForm.controls['password'].errors.minlength">Password must be at least 5 characters long.</div>
-            <div *ngIf="addForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
+          <div *ngIf="addUserForm.controls['password'].invalid && (addUserForm.controls['password'].dirty || addUserForm.controls['password'].touched)" class='error-msg'>
+            <div *ngIf="addUserForm.controls['password'].errors.required">Password is required.</div>
+            <div *ngIf="addUserForm.controls['password'].errors.minlength">Password must be at least 5 characters long.</div>
+            <div *ngIf="addUserForm.controls['password'].errors.maxlength">Password must be at most 10 characters long.</div>
           </div>
-        </mat-form-field>      
+        </mat-form-field-->
+
       </form>
     </mat-card-content>
     <mat-card-actions align='right'>
         <a mat-raised-button routerLink='/list-user'>Cancel</a>
-        <button mat-raised-button color='accent' class='btn' [disabled]='addForm.invalid' (click)='onSubmit()'>Add User</button>
+        <button mat-raised-button color='accent' class='btn' [disabled]='addUserForm.invalid' (click)='onSubmit()'>Add User</button>
     </mat-card-actions>
   </mat-card>
