--- a/angular/src/app/pages/user/edit-user/edit-user.component.html
+++ b/angular/src/app/pages/user/edit-user/edit-user.component.html
@@ -1,39 +1,94 @@
 <mat-card>
   <mat-card-title align='center'>Edit User</mat-card-title>
   <mat-card-content align='center'>
-    <form [formGroup]='editForm' class='login-form-container'>
-      <input type='hidden' formControlName='id'> <!-- 2018-12-22 -->
-      <input type='hidden' formControlName='userId'> <!-- 2018-12-22 -->
-      <mat-form-field [ngClass]="{'error': editForm.controls['username'].errors && editForm.controls['username'].dirty}">
+    <!-- <form [formGroup]='editUserForm' class='login-form-container'> -->
+    <form [formGroup]='editUserForm' class='normal-form'>
+      <input type='hidden' formControlName='id'>
+      <input type='hidden' formControlName='userId'>
+      <mat-grid-list cols='2' rowHeight='300px'>
+        <mat-grid-tile>
+          <div class='controls-container'>
+            <mat-form-field [ngClass]="{'error': editUserForm.controls['username'].errors && editUserForm.controls['username'].dirty}">
+              <input matInput type='text' formControlName='username' placeholder='E-Mail' required>
+              <div *ngIf="editUserForm.controls['username'].invalid && (editUserForm.controls['username'].dirty || editUserForm.controls['username'].touched)" class='error-msg'>
+                <div *ngIf="editUserForm.controls['username'].errors.required">Username is required.</div>
+                <div *ngIf="editUserForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
+                <div *ngIf="editUserForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
+              </div>
+            </mat-form-field>
+            <mat-form-field [ngClass]="{'error': editUserForm.controls['firstName'].errors && editUserForm.controls['firstName'].dirty}">
+              <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
+              <div *ngIf="editUserForm.controls['firstName'].invalid && (editUserForm.controls['firstName'].dirty || editUserForm.controls['firstName'].touched)" class='error-msg'>
+                <div *ngIf="editUserForm.controls['firstName'].errors.required">First Name is required.</div>
+                <div *ngIf="editUserForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
+              </div>
+            </mat-form-field>
+            <mat-form-field [ngClass]="{'error': editUserForm.controls['lastName'].errors && editUserForm.controls['lastName'].dirty}">
+              <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
+              <div *ngIf="editUserForm.controls['lastName'].invalid && (editUserForm.controls['lastName'].dirty || editUserForm.controls['lastName'].touched)" class='error-msg'>
+                <div *ngIf="editUserForm.controls['lastName'].errors.required">Last Name is required.</div>
+                <div *ngIf="editUserForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
+              </div>
+            </mat-form-field>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div class='controls-container'>            
+            <mat-form-field>
+              <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
+              <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
+            </mat-form-field>
+            <div class='add-bottom-padding'>
+            <!-- <div> -->
+              <mat-radio-group formControlName='gender'>
+                <mat-radio-button value='MALE'>Male</mat-radio-button>
+                <mat-radio-button value='FEMALE'>Female</mat-radio-button>
+                <mat-radio-button value='OTHER'>Other</mat-radio-button>
+              </mat-radio-group>
+            </div>
+
+            <mat-form-field>
+              <input formControlName='dateOfBirth' matInput [matDatepicker]='myDatepicker' placeholder='Date of Birth'>
+              <mat-datepicker-toggle matSuffix [for]='myDatepicker'></mat-datepicker-toggle>
+              <mat-datepicker #myDatepicker></mat-datepicker>
+            </mat-form-field>
+
+
+          </div>
+        </mat-grid-tile>
+      </mat-grid-list>
+
+      <!--mat-form-field [ngClass]="{'error': editUserForm.controls['username'].errors && editUserForm.controls['username'].dirty}">
         <input matInput type='text' formControlName='username' placeholder='E-Mail' required>
-        <div *ngIf="editForm.controls['username'].invalid && (editForm.controls['username'].dirty || editForm.controls['username'].touched)" class='error-msg'>
-          <div *ngIf="editForm.controls['username'].errors.required">Username is required.</div>
-          <div *ngIf="editForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
-          <div *ngIf="editForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
+        <div *ngIf="editUserForm.controls['username'].invalid && (editUserForm.controls['username'].dirty || editUserForm.controls['username'].touched)" class='error-msg'>
+          <div *ngIf="editUserForm.controls['username'].errors.required">Username is required.</div>
+          <div *ngIf="editUserForm.controls['username'].errors.minlength">Username must be at least 2 characters long.</div>
+          <div *ngIf="editUserForm.controls['username'].errors.patternInvalid">Username must be a valid E-Mail address.</div>
         </div>
       </mat-form-field>
-      <mat-form-field [ngClass]="{'error': editForm.controls['firstName'].errors && editForm.controls['firstName'].dirty}">
-          <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
-          <div *ngIf="editForm.controls['firstName'].invalid && (editForm.controls['firstName'].dirty || editForm.controls['firstName'].touched)" class='error-msg'>
-            <div *ngIf="editForm.controls['firstName'].errors.required">First Name is required.</div>
-            <div *ngIf="editForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
-          </div>
-        </mat-form-field>
-        <mat-form-field [ngClass]="{'error': editForm.controls['lastName'].errors && editForm.controls['lastName'].dirty}">
-          <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
-          <div *ngIf="editForm.controls['lastName'].invalid && (editForm.controls['lastName'].dirty || editForm.controls['lastName'].touched)" class='error-msg'>
-            <div *ngIf="editForm.controls['lastName'].errors.required">Last Name is required.</div>
-            <div *ngIf="editForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
-          </div>
-        </mat-form-field>
+      <mat-form-field [ngClass]="{'error': editUserForm.controls['firstName'].errors && editUserForm.controls['firstName'].dirty}">
+        <input matInput type='text' formControlName='firstName' placeholder='First Name' required>
+        <div *ngIf="editUserForm.controls['firstName'].invalid && (editUserForm.controls['firstName'].dirty || editUserForm.controls['firstName'].touched)" class='error-msg'>
+          <div *ngIf="editUserForm.controls['firstName'].errors.required">First Name is required.</div>
+          <div *ngIf="editUserForm.controls['firstName'].errors.minlength">First Name must be at least 2 characters long.</div>
+        </div>
+      </mat-form-field>
+      <mat-form-field [ngClass]="{'error': editUserForm.controls['lastName'].errors && editUserForm.controls['lastName'].dirty}">
+        <input matInput type='text' formControlName='lastName' placeholder='Last Name' required>
+        <div *ngIf="editUserForm.controls['lastName'].invalid && (editUserForm.controls['lastName'].dirty || editUserForm.controls['lastName'].touched)" class='error-msg'>
+          <div *ngIf="editUserForm.controls['lastName'].errors.required">Last Name is required.</div>
+          <div *ngIf="editUserForm.controls['lastName'].errors.minlength">Last Name must be at least 2 characters long.</div>
+        </div>
+      </mat-form-field>
       <mat-form-field>
         <mat-checkbox class='example-margin' formControlName='showpassword' (click)='hideShowPassword()'>Show password</mat-checkbox>
         <input matInput type={{inputType}} formControlName='password' placeholder='Password' required>
-      </mat-form-field>
+      </mat-form-field-->
+      
     </form>
   </mat-card-content>
   <mat-card-actions align='right'>
       <a mat-raised-button routerLink='/list-user'>Cancel</a>
-      <button mat-raised-button color='accent' class='btn' [disabled]='editForm.invalid' (click)='onSubmit()'>Update User</button>
+      <button mat-raised-button color='accent' class='btn' [disabled]='editUserForm.invalid' (click)='onSubmit()'>Update User</button>
   </mat-card-actions>
 </mat-card>
